jena-shex/src/test/files/spec/negativeSyntax/group-no-SEMICOLON-separators.shex
# group without SEMICOLON separators
<http://a.example/IssueShape> {
   <http://a.example/p1> .
   <http://a.example/p2> .
}
